--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <script>
+        const values = ["rock", "paper", "scissors"];
 
+        function getComputerChoice() {
+            return values[Math.floor(Math.random() * 3)];
+        }
     </script>
 </body>
 </html>
